# tac-scenario-generator

./: CHANGELOG.md  LICENSE  README.md  input.yaml  pyproject.toml  scenario_config.yaml  tox.ini
.github/workflows/: ci.yml
tac_scenario_generator/: .main.py.swo  main.py  oob_generator.py  settings.py
tac_scenario_generator/adapters/: __init__.py
tac_scenario_generator/adapters/combat_mission/: adapter.py  api.py  base_adapter.py  driver.py  errors.py  scenario_tools.py
tac_scenario_generator/adapters/combat_mission/cmak/: __init__.py
tac_scenario_generator/adapters/combat_mission/cmak/force_data/: canadian_air.csv  canadian_artillery.csv  canadian_infantry_air.csv  canadian_infantry_artillery.csv  canadian_infantry_infantry.csv  italian_infantry_air.csv  italian_infantry_armor.csv  italian_infantry_artillery.csv  italian_infantry_fortification.csv  italian_infantry_infantry.csv  italian_infantry_support.csv  italian_infantry_vehicle.csv
tac_scenario_generator/combat_mission/: driver.py
tests/: test_driver.py  test_main.py
tests/adapters/: test_init.py
tests/adapters/combat_mission/: test_driver.py
